--- a/build.yml
+++ b/build.yml
@@ -13,8 +13,7 @@ steps:
     versionSpec: $(pythonVersion)
 
 - bash: |
-   pip install --upgrade pip
-   pip install pytest
+   pip3 install -r requirements.txt
 
 # Run tests
 - bash: python3 -m pytest sample.py
